--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.3.0",
     "next": "14.2.3",
+    "next-client-cookies": "^1.1.1",
     "next-plugin-svgr": "^1.1.10",
     "postcss": "^8.4.38",
     "react": "^18",
