--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepare": "husky install",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@storybook/addon-controls": "^8.1.1",
@@ -38,6 +40,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.3.0",
+    "husky": "^9.0.11",
     "next": "14.2.3",
     "next-plugin-svgr": "^1.1.10",
     "postcss": "^8.4.38",
@@ -53,5 +56,8 @@
     "typescript": "^5",
     "yarn": "^1.22.22",
     "zustand": "^4.5.2"
+  },
+  "devDependencies": {
+    "type-check": "^0.4.0"
   }
 }
